<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Digital Learning App</string>
    <string name="username">Username…</string>
    <string name="submit">Submit</string>
    <string name="info_message">Feel free to browse through your training sessions, and complete one!</string>
    <string name="good_day">Good day,</string>
    <string name="mandatory">Mandatory Courses</string>
    <!-- Preference Titles -->
    <string name="test_mp3" translatable="false">"https://storage.googleapis.com/exoplayer-test-media-0/play.mp3"</string>
    <string name="media_url_mp4" translatable="false">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="myTestMp4" translatable="false">"https://download.blender.org/demo/movies/BBB/bbb_sunflower_1080p_30fps_normal.mp4"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="dark_light_mode">Dark/Light Mode</string>
    <string name="language">Language</string>

</resources>